--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -84,7 +84,7 @@
                 <DataTemplate xmlns:c="using:ExClient"
                               x:DataType="c:GalleryImage">
                     <Image Source="{x:Bind Thumb}"
-                           Width="100" />
+                           Width="100" MaxHeight="180"/>
                 </DataTemplate>
             </GridView.ItemTemplate>
             <GridView.Footer>
