--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -60,56 +60,114 @@
                   SelectionChanged="fv_SelectionChanged"
                   ItemsSource="{x:Bind VM.Gallery, Mode=OneWay}"
                   SelectedIndex="{x:Bind VM.CurrentIndex, Mode=TwoWay}">
-            <FlipView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient"
-                              x:DataType="c:GalleryImage">
-                    <Grid DoubleTapped="fvi_DoubleTapped"
-                          Tapped="fvi_Tapped">
-                        <Grid.Resources>
-                            <local:InvertConverter x:Key="con">
-                                <local:InvertConverter.Raw>
-                                    <local:ObjectToBooleanConverter>
-                                        <local:ObjectToBooleanConverter.ValueForTrue>
-                                            <GridLength>48</GridLength>
-                                        </local:ObjectToBooleanConverter.ValueForTrue>
-                                        <local:ObjectToBooleanConverter.ValueForFalse>
-                                            <GridLength>0</GridLength>
-                                        </local:ObjectToBooleanConverter.ValueForFalse>
-                                        <local:ObjectToBooleanConverter.InnerConverter>
-                                            <local:BooleanToVisibilityConverter />
-                                        </local:ObjectToBooleanConverter.InnerConverter>
-                                    </local:ObjectToBooleanConverter>
-                                </local:InvertConverter.Raw>
-                            </local:InvertConverter>
-                        </Grid.Resources>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="{Binding Visibility, ElementName=cb_top, Converter={StaticResource con}}" />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <ProgressBar Value="{x:Bind Progress, Mode=OneWay}"
-                                     Visibility="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
-                                     Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
-                                     IsIndeterminate="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
-                                     VerticalAlignment="Top"
-                                     Grid.Row="1" />
-                        <ScrollViewer x:Name="sv"
-                                      ZoomMode="Enabled"
-                                      HorizontalScrollBarVisibility="Hidden"
-                                      VerticalScrollBarVisibility="Hidden"
-                                      MinZoomFactor="1"
-                                      Grid.RowSpan="2"
-                                      SizeChanged="sv_SizeChanged"
-                                      ManipulationDelta="sv_ManipulationDelta"
-                                      PointerEntered="sv_PointerEntered"
-                                      PointerMoved="sv_PointerMoved"
-                                      PointerPressed="sv_PointerPressed"
-                                      ManipulationMode="All">
-                            <Image Source="{x:Bind Image, Mode=OneWay}"
-                                   SizeChanged="Image_SizeChanged" />
-                        </ScrollViewer>
-                    </Grid>
-                </DataTemplate>
-            </FlipView.ItemTemplate>
+            <FlipView.ItemTemplateSelector>
+                <local:ImagePresenterSelector>
+                    <local:ImagePresenterSelector.Template>
+                        <DataTemplate xmlns:c="using:ExClient"
+                                      x:DataType="c:GalleryImage">
+                            <Grid DoubleTapped="fvi_DoubleTapped"
+                                  Tapped="fvi_Tapped">
+                                <Grid.Resources>
+                                    <local:InvertConverter x:Key="con">
+                                        <local:InvertConverter.Raw>
+                                            <local:ObjectToBooleanConverter>
+                                                <local:ObjectToBooleanConverter.ValueForTrue>
+                                                    <GridLength>48</GridLength>
+                                                </local:ObjectToBooleanConverter.ValueForTrue>
+                                                <local:ObjectToBooleanConverter.ValueForFalse>
+                                                    <GridLength>0</GridLength>
+                                                </local:ObjectToBooleanConverter.ValueForFalse>
+                                                <local:ObjectToBooleanConverter.InnerConverter>
+                                                    <local:BooleanToVisibilityConverter />
+                                                </local:ObjectToBooleanConverter.InnerConverter>
+                                            </local:ObjectToBooleanConverter>
+                                        </local:InvertConverter.Raw>
+                                    </local:InvertConverter>
+                                </Grid.Resources>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="{Binding Visibility, ElementName=cb_top, Converter={StaticResource con}}" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <ProgressBar Value="{x:Bind Progress, Mode=OneWay}"
+                                             Visibility="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             IsIndeterminate="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             VerticalAlignment="Top"
+                                             Grid.Row="1" />
+                                <ScrollViewer x:Name="sv"
+                                              ZoomMode="Enabled"
+                                              HorizontalScrollBarVisibility="Hidden"
+                                              VerticalScrollBarVisibility="Hidden"
+                                              MinZoomFactor="1"
+                                              Grid.RowSpan="2"
+                                              SizeChanged="sv_SizeChanged"
+                                              ManipulationDelta="sv_ManipulationDelta"
+                                              PointerEntered="sv_PointerEntered"
+                                              PointerMoved="sv_PointerMoved"
+                                              PointerPressed="sv_PointerPressed"
+                                              ManipulationMode="All">
+                                    <Image xmlns:gif="using:XamlAnimatedGif"
+                                           Source="{x:Bind Image, Mode=OneWay}"
+                                           SizeChanged="Image_SizeChanged" />
+                                </ScrollViewer>
+                            </Grid>
+                        </DataTemplate>
+                    </local:ImagePresenterSelector.Template>
+                    <local:ImagePresenterSelector.GifTemplate>
+                        <DataTemplate xmlns:c="using:ExClient"
+                                      x:DataType="c:GalleryImage">
+                            <Grid DoubleTapped="fvi_DoubleTapped"
+                                  Tapped="fvi_Tapped">
+                                <Grid.Resources>
+                                    <local:InvertConverter x:Key="con">
+                                        <local:InvertConverter.Raw>
+                                            <local:ObjectToBooleanConverter>
+                                                <local:ObjectToBooleanConverter.ValueForTrue>
+                                                    <GridLength>48</GridLength>
+                                                </local:ObjectToBooleanConverter.ValueForTrue>
+                                                <local:ObjectToBooleanConverter.ValueForFalse>
+                                                    <GridLength>0</GridLength>
+                                                </local:ObjectToBooleanConverter.ValueForFalse>
+                                                <local:ObjectToBooleanConverter.InnerConverter>
+                                                    <local:BooleanToVisibilityConverter />
+                                                </local:ObjectToBooleanConverter.InnerConverter>
+                                            </local:ObjectToBooleanConverter>
+                                        </local:InvertConverter.Raw>
+                                    </local:InvertConverter>
+                                </Grid.Resources>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="{Binding Visibility, ElementName=cb_top, Converter={StaticResource con}}" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <ProgressBar Value="{x:Bind Progress, Mode=OneWay}"
+                                             Visibility="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             IsIndeterminate="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                             VerticalAlignment="Top"
+                                             Grid.Row="1" />
+                                <ScrollViewer x:Name="sv"
+                                              xmlns:img="using:ImageLib.Controls"
+                                              ZoomMode="Enabled"
+                                              HorizontalScrollBarVisibility="Hidden"
+                                              VerticalScrollBarVisibility="Hidden"
+                                              MinZoomFactor="1"
+                                              Grid.RowSpan="2"
+                                              SizeChanged="sv_SizeChanged"
+                                              ManipulationDelta="sv_ManipulationDelta"
+                                              PointerEntered="sv_PointerEntered"
+                                              PointerMoved="sv_PointerMoved"
+                                              PointerPressed="sv_PointerPressed"
+                                              ManipulationMode="All">
+                                    <img:ImageView UriSource="{x:Bind ImageFileUri, Mode=OneWay}"
+                                                   SizeChanged="Image_SizeChanged"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"/>
+                                </ScrollViewer>
+                            </Grid>
+                        </DataTemplate>
+                    </local:ImagePresenterSelector.GifTemplate>
+                </local:ImagePresenterSelector>
+            </FlipView.ItemTemplateSelector>
         </FlipView>
         <CommandBar x:Name="cb_top"
                     RelativePanel.AlignLeftWithPanel="True"
@@ -143,7 +201,7 @@
                         </ToolTipService.ToolTip>
                     </TextBlock>
                     <TextBlock x:Name="tb_si"
-                               Text="{x:Bind VM.CurrentIndex, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter=\{0\}}"
+                               Text="{x:Bind VM.CurrentIndex, Mode=OneWay, Converter={StaticResource IndexToStringConverter}, ConverterParameter=\{0\}}"
                                Style="{StaticResource BodyTextBlockStyle}"
                                RelativePanel.AlignVerticalCenterWithPanel="True"
                                RelativePanel.LeftOf="tb_sep" />
@@ -179,7 +237,7 @@
                 <AppBarButton x:Name="abb_open"
                               Label="Open in browser"
                               Command="{x:Bind VM.OpenInBrowser, Mode=OneWay}"
-                              CommandParameter="{x:Bind fv.SelectedItem, Mode=OneWay}"/>
+                              CommandParameter="{x:Bind fv.SelectedItem, Mode=OneWay}" />
                 <AppBarSeparator />
                 <AppBarButton x:Name="abb_Info"
                               Label="Image infomation">
