--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -35,18 +35,8 @@
             <DoubleAnimationUsingKeyFrames Storyboard.TargetName="cp_Toast"
                                            Storyboard.TargetProperty="(UIElement.Opacity)"
                                            Duration="0:0:3">
-                <EasingDoubleKeyFrame KeyTime="0:0:0"
-                                      Value="0">
-                    <EasingDoubleKeyFrame.EasingFunction>
-                        <CubicEase EasingMode="EaseIn" />
-                    </EasingDoubleKeyFrame.EasingFunction>
-                </EasingDoubleKeyFrame>
-                <EasingDoubleKeyFrame KeyTime="0:0:0.2"
-                                      Value="1">
-                    <EasingDoubleKeyFrame.EasingFunction>
-                        <CubicEase EasingMode="EaseIn" />
-                    </EasingDoubleKeyFrame.EasingFunction>
-                </EasingDoubleKeyFrame>
+                <LinearDoubleKeyFrame KeyTime="0:0:0"
+                                      Value="1" />
                 <LinearDoubleKeyFrame KeyTime="0:0:1"
                                       Value="1" />
                 <EasingDoubleKeyFrame KeyTime="0:0:3"
@@ -114,9 +104,9 @@
                           VerticalContentAlignment="Center"
                           Opacity="0"
                           Visibility="Collapsed"
-                          Content="12"
                           Padding="16,8">
-
+            <TextBlock x:Name="tb_Toast"
+                       TextWrapping="WrapWholeWords" />
         </ContentPresenter>
         <RelativePanel x:Name="rp_Disable"
                        Background="{ThemeResource SystemControlPageBackgroundMediumAltMediumBrush}"
