--- a/ExViewer/Controls/CategorySelector.xaml
+++ b/ExViewer/Controls/CategorySelector.xaml
@@ -8,9 +8,9 @@
              d:DesignHeight="300"
              d:DesignWidth="400">
     <GridView x:Name="gv_AdvancedSearch"
-              HorizontalAlignment="Center"
               ItemsSource="{x:Bind filter}"
-              Loaded="gv_AdvancedSearch_Loaded">
+              Loaded="gv_AdvancedSearch_Loaded"
+              HorizontalAlignment="Center">
         <GridView.ItemContainerStyle>
             <Style TargetType="GridViewItem">
                 <Setter Property="MinHeight"
@@ -32,5 +32,20 @@
                                             IsChecked="{x:Bind IsChecked, Mode=TwoWay, Converter={StaticResource NullableConverter}}" />
             </DataTemplate>
         </GridView.ItemTemplate>
+        <GridView.Template>
+            <ControlTemplate TargetType="GridView">
+                <Border BorderBrush="{TemplateBinding BorderBrush}"
+                        Background="{TemplateBinding Background}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                    <ItemsPresenter Header="{TemplateBinding Header}"
+                                    HeaderTemplate="{TemplateBinding HeaderTemplate}"
+                                    HeaderTransitions="{TemplateBinding HeaderTransitions}"
+                                    Footer="{TemplateBinding Footer}"
+                                    FooterTemplate="{TemplateBinding FooterTemplate}"
+                                    FooterTransitions="{TemplateBinding FooterTransitions}"
+                                    Padding="{TemplateBinding Padding}" />
+                </Border>
+            </ControlTemplate>
+        </GridView.Template>
     </GridView>
 </UserControl>
