load botm from site
Former-commit-id: 01e0ae0166278fff1e2ce1c07a3a89dc83104706 [formerly 7c74b2b60439bda4dec7576a33cb514311ecbf30]
Former-commit-id: 14f96e0f1cb15cb66b9bfb77ddfce09af976bb8c

--- a/ExViewer/Views/CachePage.xaml
+++ b/ExViewer/Views/CachePage.xaml
@@ -50,6 +50,7 @@
                   ItemsSource="{x:Bind VM.CachedGalleries, Mode=OneWay}"
                   IsItemClickEnabled="True"
                   CanDragItems="True"
+                  SelectionMode="None"
                   DragItemsStarting="lv_DragItemsStarting"
                   ItemClick="lv_ItemClick"
                   RelativePanel.AlignBottomWithPanel="True"
