--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -6,7 +6,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             Loaded="splash_Loaded"
              SizeChanged="splash_SizeChanged">
     <UserControl.Resources>
         <Storyboard x:Name="ShowPic" Completed="ShowPic_Completed">
@@ -48,6 +47,8 @@
         <Image x:Name="img_pic"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
+               ImageFailed="img_pic_ImageFailed"
+               ImageOpened="img_pic_ImageOpened"
                Grid.RowSpan="2" />
         <ProgressRing x:Name="pr" Grid.Row="1"
                       Width="40"
